--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.8.0",
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.2",
     "leaflet": "^1.9.2",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
@@ -30,7 +32,6 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.8.0",
     "prettier": "^2.7.1"
   },
   "eslintConfig": {
